Fix overlapping sections before fullpage starts

--- a/_sass/components/_prod-line.scss
+++ b/_sass/components/_prod-line.scss
@@ -66,6 +66,12 @@
     }
   }
 
+  &__sections {
+    > :not(:first-child) {
+      display: none;
+    }
+  }
+
   &__id {
     display: block;
     font: 700 40px / 1 $helvetica;
